# cmake-exercise

./: .gitignore  CMakeLists.txt  build.sh  readme.md
lib/MathFunctions/: CMakeLists.txt  MathFunctions.h  my_sqrt.cpp
src/: ExerciseConfig.h.in  main.cpp
